@@ -1,5 +1,62 @@
 package fr.dwightstudio.jarmemu.asm.instruction;
 
-public class BXNSInstruction {
-    //TODO: Faire l'instruction
+import fr.dwightstudio.jarmemu.asm.argument.ParsedArgument;
+import fr.dwightstudio.jarmemu.asm.exception.ASMException;
+import fr.dwightstudio.jarmemu.asm.exception.ExecutionASMException;
+import fr.dwightstudio.jarmemu.asm.exception.SyntaxASMException;
+import fr.dwightstudio.jarmemu.gui.JArmEmuApplication;
+import fr.dwightstudio.jarmemu.sim.entity.Register;
+import fr.dwightstudio.jarmemu.sim.entity.StateContainer;
+import org.jetbrains.annotations.NotNull;
+
+public class BXNSInstruction extends ParsedInstruction<Register, Object, Object, Object>{
+    public BXNSInstruction(Condition condition, boolean updateFlags, DataMode dataMode, UpdateMode updateMode, ParsedArgument<Register> arg1, ParsedArgument<Object> arg2, ParsedArgument<Object> arg3, ParsedArgument<Object> arg4) throws SyntaxASMException {
+        super(condition, updateFlags, dataMode, updateMode, arg1, arg2, arg3, arg4);
+        throw new SyntaxASMException(JArmEmuApplication.formatMessage("%exception.instruction.wrongVersion", "BXNS"));
+    }
+
+    public BXNSInstruction(Condition condition, boolean updateFlags, DataMode dataMode, UpdateMode updateMode, String arg1, String arg2, String arg3, String arg4) throws ASMException {
+        super(condition, updateFlags, dataMode, updateMode, arg1, arg2, arg3, arg4);
+        throw new SyntaxASMException(JArmEmuApplication.formatMessage("%exception.instruction.wrongVersion", "BXNS"));
+    }
+
+    @Override
+    protected @NotNull Class<? extends ParsedArgument<Register>> getParsedArg1Class() {
+        return null;
+    }
+
+    @Override
+    protected @NotNull Class<? extends ParsedArgument<Object>> getParsedArg2Class() {
+        return null;
+    }
+
+    @Override
+    protected @NotNull Class<? extends ParsedArgument<Object>> getParsedArg3Class() {
+        return null;
+    }
+
+    @Override
+    protected @NotNull Class<? extends ParsedArgument<Object>> getParsedArg4Class() {
+        return null;
+    }
+
+    @Override
+    public boolean doModifyPC() {
+        return true;
+    }
+
+    @Override
+    public boolean hasWorkingRegister() {
+        return false;
+    }
+
+    @Override
+    protected void execute(StateContainer stateContainer, boolean ignoreExceptions, Register arg1, Object arg2, Object arg3, Object arg4) throws ExecutionASMException {
+
+    }
+
+    @Override
+    protected void verify(StateContainer stateContainer, Register arg1, Object arg2, Object arg3, Object arg4) throws ASMException {
+
+    }
 }
