@@ -6,6 +6,7 @@
 - Added unintentation (Shift+Tab)
 - Improved code highlighting (real time parsing)
 - Added BLXNS instruction
+- Added BXNS instruction
 - Fixed BLX instruction not being able to use labels
 
 
